| Summary: | ASTERISK-23266: [patch]pjsip_cli: Memory leak in ast_sip_cli_print_sorcery_objectset | ||
| Reporter: | George Joseph (gjoseph) | Labels: | |
| Date Opened: | 2014-02-07 15:02:22.000-0600 | Date Closed: | 2014-02-21 11:11:02.000-0600 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_pjsip |
| Versions: | SVN 12.0.0 | Frequency of Occurrence | Occasional |
| Related Issues: | |||
| Environment: | Fedora 20 x86_64 | Attachments: | |
| Description: | I left out 2 ast_variables_destroy() calls so the variables allocated by ast_sorcery_objectset_create() never get released.
It leaks whenever someone does a pjsip show <object_type> <object_id> from the command line. Patch coming. | ||
| Comments: | |||